src/internal/grid/styles.scss
.grid {
  display: grid;
  /* Matches GRID_GAP constant used for calculations. */
  /* TODO: consider using different gaps for comfortable/compact which would require a mode observer. */
  gap: 16px;
  /* Matches ROWSPAN_HEIGHT constant used for calculations. */
  grid-auto-rows: 100px;
}

.grid[data-columns="1"] {
  grid-template-columns: 1fr;
}

.grid[data-columns="4"] {
  grid-template-columns: repeat(4, 1fr);
}

$columns: 4;

@for $i from 1 through $columns {
  .grid[data-columns="1"] > .grid__item[data-column-span="#{$i}"] {
    grid-column-end: span 1;
  }

  .grid[data-columns="4"] > .grid__item[data-column-span="#{$i}"] {
    grid-column-end: span $i;
  }
}

@for $i from 1 through $columns {
  .grid[data-columns="1"] > .grid__item[data-column-offset="#{$i}"] {
    grid-column-start: 1;
  }

  .grid[data-columns="4"] > .grid__item[data-column-offset="#{$i}"] {
    grid-column-start: $i;
  }
}

.grid__item__content {
  width: 100%;
  height: 100%;

  &.in-transition {
    transition: transform 200ms;
    transition-timing-function: ease;
  }
  &.transformed {
    z-index: 1;
    position: absolute;
  }
  &.removed {
    display: none;
  }
}

